@@ -5,6 +5,8 @@ Version 0.7
 -----------
 (codename to be selected, released Feb XX, 2007)
 
+- Added a "state" keyword argument to the `using` helper.
+
 - Added a `commandprefix` option to the `LatexFormatter` which allows to
   control how the command names are constructed.
 
@@ -14,6 +16,7 @@ Version 0.7
   * Windows batch files
   * Trac Wiki markup
   * Python tracebacks
+  * ReStructuredText
   * and the Befunge esoteric programming language (yay!)
 
 - Added Mako lexers by Ben Bangert.
